Include <sys/cdefs.h>, <sys/featuretest.h>, and <sys/ansi.h> unconditionally, not only #ifndef _KERNEL. The kernel declarations require cdefs.h and standard practice is to include cdefs.h where it's used; they also require sys/ansi.h; and while they don't require featuretest.h it's also harmless... and includes should be at the top anyhow.

PR 46557 from Richard Hansen.